# rust_ws

./: README.md
.cargo/: config.toml
docs/: 1.安装指南.md  2.ros2_rust指南.md  3.编写第一个节点.md  4.开始写一个话题.md
install/: local_setup.sh  setup.sh  setup.zsh
install/action_msgs/share/action_msgs/: package.sh
install/actionlib_msgs/share/actionlib_msgs/: local_setup.sh  package.sh
install/builtin_interfaces/share/builtin_interfaces/: package.sh
install/common_interfaces/share/common_interfaces/: package.sh
install/composition_interfaces/share/composition_interfaces/: package.sh
install/diagnostic_msgs/share/diagnostic_msgs/: package.sh
install/example_interfaces/share/example_interfaces/: package.sh
install/examples_rclrs_message_demo/share/examples_rclrs_message_demo/: package.sh
install/examples_rclrs_minimal_client_service/share/examples_rclrs_minimal_client_service/: package.sh
install/examples_rclrs_minimal_pub_sub/share/examples_rclrs_minimal_pub_sub/: package.sh
install/geometry_msgs/share/geometry_msgs/: package.sh
install/lifecycle_msgs/share/lifecycle_msgs/: package.sh
install/nav_msgs/share/nav_msgs/: package.sh
install/rcl_interfaces/share/rcl_interfaces/: package.sh
install/rclrs/share/rclrs/: package.sh
install/visualization_msgs/share/visualization_msgs/rust/: Cargo.toml
log/: latest_build
src/.cargo/: config.toml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/install/visualization_msgs/share/visualization_msgs/rust/: Cargo.toml
src/log/: latest  latest_build  latest_clean
(+165 files in other folders)
