[package]
name = "visualization_msgs"
version = "4.2.4"
edition = "2021"

[dependencies]
rosidl_runtime_rs = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }
builtin_interfaces = "*"
std_msgs = "*"
geometry_msgs = "*"
sensor_msgs = "*"

[features]
serde = ['dep:serde', 'dep:serde-big-array', 'rosidl_runtime_rs/serde', 'builtin_interfaces/serde', 'std_msgs/serde', 'geometry_msgs/serde', 'sensor_msgs/serde']
